# aoc2022

./: LICENSE  README.md  Taskfile.yml  pyproject.toml  tox.ini
src/adlib/: runnerz.py
src/aoc/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py
src/aoc/demo_data/: 01.yml  02.yml  03.yml  04.yml  05.yml  06.yml  07.yml  08.yml
